<resources>
    <string name="app_name">FYP NFC Prototype</string>
    <string name="txtBtnSettings">SETTINGS</string>
    <string name="txtBtnReadTag">READ TAG</string>
    <string name="txtBtnWriteTag">WRITE TAG</string>
    <string name="txtBtnHome">HOME</string>
    <string name="txtBtnCycle">CYCLE COLOURS</string>
    <string name="txtBtnReadAgain">READ AGAIN</string>
    <string name="txtBtnWriteNow">WRITE NOW</string>
    <string name="txtBtnWriteNew">WRITE NEW</string>
    <string name="txtBtnWriteAgain">WRITE AGAIN</string>
    <string name="txtBtnTryAgain">TRY AGAIN</string>
    <string name="txtTextHomeTitle">HOME SCREEN</string>
    <string name="txtTextSettingsTitle">SETTINGS SCREEN</string>
    <string name="txtTextReadTagTitle">READ TAG SUCCESS</string>
    <string name="txtTextWriteSucceessTitle">WRITE SUCCESSFUL</string>
    <string name="txtTextWriteFailedTitle">WRITE FAILED</string>
    <string name="txtTextWriterTitle">TAG WRITER</string>
    <string name="txtTextHintTagWriter">Write Tag Label Here</string>
</resources>