<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonHomeToSettings"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginBottom="48dp"
        android:text="@string/txtBtnSettings"
        android:textSize="28sp"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonHomeReadTag"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeWidth="5dp" />

    <Button
        android:id="@+id/buttonHomeReadTag"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:text="@string/txtBtnReadTag"
        android:textSize="28sp"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeWidth="5dp" />

    <Button
        android:id="@+id/buttonHomeWriteTag"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="48dp"
        android:text="@string/txtBtnWriteTag"
        android:textSize="28sp"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonHomeReadTag"
        app:strokeWidth="5dp" />

    <TextView
        android:id="@+id/textHomeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/txtTextHomeTitle"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>