<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".ReadActivity">


    <Button
        android:id="@+id/buttonReadToHome"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginBottom="48dp"
        android:backgroundTint="@color/blue"
        android:text="@string/txtBtnHome"
        android:textColor="@color/yellow"
        android:textSize="28sp"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonReadAgain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/yellow"
        app:strokeWidth="5dp" />

    <Button
        android:id="@+id/buttonReadAgain"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:backgroundTint="@color/blue"
        android:text="@string/txtBtnReadAgain"
        android:textColor="@color/yellow"
        android:textSize="28sp"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/yellow"
        app:strokeWidth="5dp" />

    <TextView
        android:id="@+id/textReadTagScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/txtTextReadTagTitle"
        android:textColor="@color/yellow"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>